tests/test-dirs/upstream-typing-recovery/original-tests/label_not_mutable.compilers.reference
File "label_not_mutable.ml", line 1:
Error: Multiple errors were encountered
File "label_not_mutable.ml", line 14, characters 11-20:
14 |   let () = x.x <- 12 in
                ^^^^^^^^^
  The record field x is not mutable
File "label_not_mutable.ml", line 15, characters 11-20:
15 |   let () = x.y <- 12 in
                ^^^^^^^^^
  The record field y is not mutable
File "label_not_mutable.ml", line 20, characters 17-19:
20 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
